Bug 239372 - r350207 panic on ppc64 (G5Quad) in moea64_pvo_remove_from_page
Summary: r350207 panic on ppc64 (G5Quad) in moea64_pvo_remove_from_page
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: powerpc Any
: --- Affects Only Me
Assignee: freebsd-ppc (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-22 07:35 UTC by Francis Little
Modified: 2019-12-29 00:21 UTC (History)
3 users (show)

See Also:


Attachments
panic screen shot (905.97 KB, image/png)
2019-07-22 07:38 UTC, Francis Little
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francis Little 2019-07-22 07:35:12 UTC
Hi, updated to r350207 on PowerMac G5 Quad.

On Reboot, the Kernel panics instantly in moea64_pvo_remove_from_page, screen shot attached.
Comment 1 Francis Little 2019-07-22 07:38:05 UTC
Created attachment 205983 [details]
panic screen shot
Comment 2 Justin Hibbits freebsd_committer freebsd_triage 2019-07-22 15:42:47 UTC
Oops, sorry.  Apparently I hadn't tested the same patch I committed.  On line 1458, the 'if (oldpvo != NULL)' should be 'if (error == EEXIST)'.  I'll commit the fix tonight.
Comment 3 commit-hook freebsd_committer freebsd_triage 2019-07-22 23:00:44 UTC
A commit references this bug:

Author: jhibbits
Date: Mon Jul 22 22:59:51 UTC 2019
New revision: 350232
URL: https://svnweb.freebsd.org/changeset/base/350232

Log:
  powerpc: Unbreak 64-bit pmap from 350206

  oldpvo is never explicitly NULL'd by moea64_pvo_enter(), so don't check for
  NULL to do anything, only check error.

  PR:		239372
  Reported by:	Francis Little

Changes:
  head/sys/powerpc/aim/mmu_oea64.c
Comment 4 Francis Little 2019-07-23 20:18:04 UTC
Yep, that's fixed it!